--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "wagmi": "^2.18.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.5.5",
     "@types/next": "^8.0.7",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
