--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-  "extends": ["next/core-web-vitals"],
+  "extends": ["next"],
   "rules": {
     "@next/next/no-img-element": "off",
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "react/jsx-no-leaked-renders": "warn"
   }
 }
