--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-query": "^5.90.2",
     "@types/html2canvas": "^0.5.35",
+    "better-sqlite3": "^12.4.1",
     "encode-utf8": "^2.0.0",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "next": "^15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "sqlite3": "^5.1.7",
     "viem": "^2.38.0",
     "wagmi": "^2.18.0"
   },
