--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "@next/next/no-img-element": "off",
     "react/no-unescaped-entities": "off",
