--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "wagmi": "^2.18.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@next/bundle-analyzer": "^15.5.5",
     "@types/next": "^8.0.7",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.37.0",
     "postcss": "^8.5.6",
